new updates for the contributors

--- a/app/host/templates/host/acknowledgements.html
+++ b/app/host/templates/host/acknowledgements.html
@@ -6,9 +6,17 @@
 
 <div class="p-5 text-left bg-light">
   <h1 class="mb-3">Acknowledgements</h1>
-  <h6 class="mb-3">Blast is largely glue between already established software projects. It could not
+  </h3>  <h6 class="mb-3">Blast is largely glue between already established software projects. It could not
     exist without them. If you use blast, you <b>must</b> acknowledge and cite all
     of the following projects which blast uses.</h6>
+  <h3 class="mb-3">Contributors</h3>
+  <h5 class="mb-3">Peter McGill      (University of California, Santa Cruz)</h5>
+  <h5 class="mb-3">David Jones       (University of California, Santa Cruz)</h5>
+  <h5 class="mb-3">Dave Coulter      (University of California, Santa Cruz)</h5>
+  <h5 class="mb-3">Lila Braff        (University of California, Santa Cruz)</h5>
+  <h5 class="mb-3">Kayla Loertscher  (University of California, Santa Cruz)</h5>
+  <h5 class="mb-3">Zhisen Lai        (University of California, Santa Cruz)</h5>
+  
 </div>
 
 <table class="table">
