--- a/app/host/templates/host/acknowledgements.html
+++ b/app/host/templates/host/acknowledgements.html
@@ -8,10 +8,9 @@
   <h1 class="mb-3">Acknowledgements</h1>
   </h3>  <h6 class="mb-3">Blast is largely glue between already established software projects. It could not
     exist without them. If you use blast, you <b>must</b> acknowledge and cite all
-    of the following projects which blast uses.</h6>
+    of the following projects which blast uses. Blast is based upon work supported by the National Aeronautics and Space Administration
+  under Grant No. 80NSSC21K0834 issued through the Astrophysics Data Analysis Program.</h6>
 
-  Blast is based upon work supported by the National Aeronautics and Space Administration
-  under Grant No. 80NSSC21K0834 issued through the Astrophysics Data Analysis Program.
 
   <h3 class="mb-3">Contributors</h3>
   <h5 class="mb-3">Peter McGill      (University of California, Santa Cruz)</h5>
