updates for the fixed footer

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -63,15 +63,28 @@
             </div>
 
         <footer class="footer py-3 bg-light">
+            <style>
+                .footer {
+                position: fixed;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background-color: white;
+                color: white;
+                text-align: center;
+                            }
+            </style>
+
             <div class="container">
                 <span class="text-muted">Report bugs and issues on Github
                     <a href="https://github.com/astrophpeter/blast/issues">here</a>
 
                 <span style="margin-left:2px"><span class="text-muted">| UCSC Transitent team web pages
                     <a href="https://transients.ucsc.edu/">here</a>
-                    
                 </span>
             </div>
+
+
         </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
