--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -15,6 +15,13 @@
     </head>
 
     <body>
+        <style>
+            body{
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+                            }            
+        </stYLE>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-size-xlg">
             <div class="container">
                 <a class="navbar-brand" href="#">Blast</a>
@@ -65,15 +72,14 @@
         <footer class="footer py-3 bg-light">
             <style>
                 .footer {
-                    
-                position: fixed;
+                position: FIXED;
+                padding: 20px;
                 left: 0;
                 bottom: 0;
                 width: 100%;
                 background-color: white;
                 color: white;
                 text-align: center;
-
                             }
             </style>
 
