--- a/app/host/templates/host/sed_inference_card.html
+++ b/app/host/templates/host/sed_inference_card.html
@@ -14,13 +14,57 @@
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade" id="local-params" role="tabpanel" aria-labelledby="local-params-tab">
             <div class="container">
-
+                <br>
+                <h6>Local parameter details</h6>
+                <br>
+                <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th scope="col">Parameter</th>
+                    <th scope="col">Lower Bound (16%)</th>
+                    <th scope="col">Median</th>
+                    <th scope="col">Upper Bound (84%)</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for item in local_sed_results %}
+                <tr>
+                    <td>{{item.0}}</td>
+                    <td>{{item.1|floatformat:3}}</td>
+                    <td>{{item.2|floatformat:3}}</td>
+                    <td>{{item.3|floatformat:3}}</td>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
             </div>
         </div>
         <div class="tab-pane fade show active" id="global-params" role="tabpanel" aria-labelledby="global-params-tab">
 
             <div class="container">
-
+                <br>
+                <h6>Global parameter details</h6>
+                <br>
+                <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th scope="col">Parameter</th>
+                    <th scope="col">Lower Bound (16%)</th>
+                    <th scope="col">Median</th>
+                    <th scope="col">Upper Bound (84%)</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for item in global_sed_results %}
+                <tr>
+                    <td>{{item.0}}</td>
+                    <td>{{item.1|floatformat:3}}</td>
+                    <td>{{item.2|floatformat:3}}</td>
+                    <td>{{item.3|floatformat:3}}</td>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
             </div>
         </div>
     </div>
