removed git typo

--- a/app/host/templates/host/acknowledgements.html
+++ b/app/host/templates/host/acknowledgements.html
@@ -9,7 +9,7 @@
   </h3>  <h6 class="mb-3">Blast is largely glue between already established software projects. It could not
     exist without them. If you use blast, you <b>must</b> acknowledge and cite all
     of the following projects which blast uses. Blast is based upon work supported by the National Aeronautics and Space Administration
-  under Grant No. 80NSSC21K0834 issued through the Astrophysics Data Analysis Program.</h6>git
+  under Grant No. 80NSSC21K0834 issued through the Astrophysics Data Analysis Program.</h6>
 
 
   <h3 class="mb-3">Contributors</h3>
