adding api trasient button

--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -9,6 +9,7 @@
 
 <div class="p-5 text-left bg-light">
   <h1 class="mb-3">{{transient.name}}</h1>
+    <a href="https://api/transients/get/2022test.com"<button style="background-color:#348CE0;boarder-radius:5px"> 2022test</button> <a/>
 </div>
 
 <div class="container">
