--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -8,7 +8,7 @@
 {% block body %}
 
 <div class="p-5 text-left bg-light">
-  <h1 class="mb-3">{{transient.name}} test </h1>
+  <h1 class="mb-3">{{transient.name}} </h1>
     <a href="/api/transient/get/{{transient.name}}" role="button" class="btn btn-success">Download data <i class="bi bi-box-arrow-in-down"></i></button></a>
 </div>
 <div class="container">
