bug fixing for top navigation bar

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -17,8 +17,7 @@
     <body>
         <style>
             body{
-            padding: 20px;
-            margin-bottom: 20px;
+            margin-bottom: 5%;
             border-radius: 5px;
                             }
         </stYLE>
