--- a/app/host/templates/host/acknowledgements.html
+++ b/app/host/templates/host/acknowledgements.html
@@ -19,6 +19,7 @@
   <h5 class="mb-3">Lila Braff        (University of California, Santa Cruz)</h5>
   <h5 class="mb-3">Kayla Loertscher  (University of California, Santa Cruz)</h5>
   <h5 class="mb-3">Zhisen Lai        (University of California, Santa Cruz)</h5>
+  <h5 class="mb-3">Jack Kutcka       (University of California, Santa Cruz)</h5>
 
 </div>
 
