--- a/app/host/templates/host/photometry_card.html
+++ b/app/host/templates/host/photometry_card.html
@@ -1,4 +1,92 @@
-<div class="card">
+{% extends "host/card_template.html" %}
+
+{% block title %} 
+
+<h5>Aperture Photometry</h5>
+<ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="global-tab" data-bs-toggle="tab" data-bs-target="#global" type="button" role="tab" aria-controls="global" aria-selected="false">Global</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="local-tab" data-bs-toggle="tab" data-bs-target="#local" type="button" role="tab" aria-controls="home" aria-selected="true">Local</button>
+    </li>
+</ul>
+{% endblock %}
+
+{% block body %}
+<div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade" id="local" role="tabpanel" aria-labelledby="local-tab">
+        <div class="container">
+            <br>
+            <h6>Aperture details</h6>
+        RA, DEC (J2000) = {{local_aperture.ra}}, {{local_aperture.dec}}<br>
+        semi major axis, semi minor axis (arcsec) = {{local_aperture.semi_major_axis}}, {{local_aperture.semi_minor_axis}}<br>
+        angle (degrees, anti-clockwise from east) = {{local_aperture.orientation_angle}}<br>
+            <br>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th scope="col">Filter</th>
+                <th scope="col">Flux (mJy)</th>
+                <th scope="col">Flux error (mJy)</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for item in local_aperture_photometry %}
+            <tr>
+                <td>{{item.filter.name}}</td>
+                <td>{{item.flux_rounded}}</td>
+                <td>{{item.flux_error_rounded}}</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        </div>
+    </div>
+    <div class="tab-pane fade show active" id="global" role="tabpanel" aria-labelledby="global-tab">
+        <br>
+        <div class="container">
+        <h6>Aperture details</h6>
+            RA, DEC (J2000) = {{global_aperture.ra}}, {{global_aperture.dec}}<br>
+        semi major axis, semi minor axis (arcsec) = {{global_aperture.semi_major_axis}}, {{global_aperture.semi_minor_axis}}<br>
+        angle (degrees, anti-clockwise from east) = {{global_aperture.orientation_angle}}<br>
+            <br>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th scope="col">Filter</th>
+                <th scope="col">Flux (mJy)</th>
+                <th scope="col">Flux error (mJy)</th>
+            </tr>
+            </thead>
+            <tbody>
+                {% for item in global_aperture_photometry %}
+                <tr>
+                    <td>{{item.filter.name}}</td>
+                    <td>{{item.flux_rounded}}</td>
+                    <td>{{item.flux_error_rounded}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="card">
     <div class="card-header">
         <h5>Aperture Photometry</h5>
         <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
@@ -70,4 +158,4 @@
         </div>
     </div>
 </div>
-<div>&nbsp;</div>
+<div>&nbsp;</div> -->
