--- a/app/host/templates/host/analytics_processing_trend_card.html
+++ b/app/host/templates/host/analytics_processing_trend_card.html
@@ -1,8 +1,13 @@
- <div class="card">
+{% extends "host/card_template.html"%}
+
+{% block title %} <h5>Transient Processing Trends</h5> {% endblock %}
+
+{% block body %} {{ bokeh_processing_trends_div | safe }} {% endblock %} 
+<!-- <div class="card">
      <h5 class="card-header">Transient Processing Trends</h5>
      <div class="card-body">
         {{ bokeh_processing_trends_div | safe }}
 
      </div>
  </div>
-<div>&nbsp;</div>
+<div>&nbsp;</div> -->
