--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -1,105 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>{% block title %}{% endblock %}</title>
-        <!-- Bokeh -->
-        <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css"/>
-        <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"></script>
-        <!-- Boostrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-              rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-              crossorigin="anonymous">
-        <!-- Icons -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
-    </head>
-
-    <body>
-        <style>
-            body{
+<head>
+    <title>{% block title %}{% endblock %}</title>
+    <!-- Bokeh -->
+    <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css" />
+    <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"></script>
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <style>
+        body {
             margin-bottom: 5%;
             border-radius: 5px;
-                            }
-        </stYLE>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-size-xlg">
-            <div class="container">
-                <a class="navbar-brand" href="#">Blast</a>
-                <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#navbarNav"
-                        aria-controls="navbarNav"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i> Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/transients"><i class="bi bi-search"></i> Transients</a>
-                        </li>
-                        <!--<li class="nav-item">
+        }
+        footer {
+            position: fixed;
+            padding: 20px;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: white;
+            color: white;
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-size-xlg">
+        <div class="container">
+            <a class="navbar-brand" href="#">Blast</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i> Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/transients"><i class="bi bi-search"></i> Transients</a>
+                    </li>
+                    <!--<li class="nav-item">
                             <a class="nav-link" href="/analytics">Analytics</a>
                         </li>-->
-                         <li class="nav-item">
-                            <a class="nav-link" href="/acknowledgements"><i class="bi bi-mortarboard-fill"></i> Acknowledgements</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://blast.readthedocs.io/en/latest/">
-                                <i class="bi bi-book-half"></i> Docs
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/astrophpeter/blast">
-                                <i class="bi-github" role="img" aria-label="GitHub"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/acknowledgements"><i class="bi bi-mortarboard-fill"></i>
+                            Acknowledgements</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://blast.readthedocs.io/en/latest/">
+                            <i class="bi bi-book-half"></i> Docs
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/astrophpeter/blast">
+                            <i class="bi-github" role="img" aria-label="GitHub"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
-            <div class="container bg-light">
-                {% block body %}
-                {% endblock %}
-            </div>
+    <div class="container bg-light">
+        {% block body %}
+        {% endblock %}
+    </div>
 
-        <footer class="footer py-3 bg-light">
-            <style>
-                .footer {
-
-                position: FIXED;
-                padding: 20px;
-                position: fixed;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                background-color: white;
-                color: white;
-                text-align: center;
-                            }
-            </style>
-
-            <div class="container">
-                <span class="text-muted">Report bugs and issues on Github
-                    <a href="https://github.com/astrophpeter/blast/issues">here</a>
+    <footer class="footer py-3 bg-light">
+        <div class="container">
+            <span class="text-muted">Report bugs and issues on Github
+                <a href="https://github.com/astrophpeter/blast/issues">here</a>
 
                 <span style="margin-left:2px"><span class="text-muted">| UCSC Transitent team web pages
-                    <a href="https://transients.ucsc.edu/">here</a>
+                        <a href="https://transients.ucsc.edu/">here</a>
 
-                </span>
-            </div>
+                    </span>
+        </div>
 
 
-        </footer>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"></script>
     {% block script %}{% endblock %}
-    </body>
+</body>
+
 </html>
