--- a/app/host/templates/host/processing_status_card.html
+++ b/app/host/templates/host/processing_status_card.html
@@ -1,3 +1,38 @@
+{% extends "host/card_template.html" %}
+
+{% block title %} <h5>Processing Status</h5> {% endblock %}
+
+{% block body %}
+
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Task Name</th>
+            <th scope="col">Status</th>
+            <th scope="col">Time taken (s)</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for item in transient.taskregister_set.all %}
+        <tr>
+            <td>{{item.task.name}}</td>
+            <td> <span class="badge {{item.status.badge}}">{{item.status.message}}</span></td>
+            <td>
+                {% if item.last_processing_time_seconds == 'None' %}
+                    --
+                {% else %}
+                    {{item.last_processing_time_seconds}}
+                {% endif %}
+            </td>
+        </tr>
+       {% endfor %}
+    </tbody>
+</table>
+
+{% endblock %}
+
+
+<!-- 
 <div class="card">
     <h5 class="card-header">Processing Status</h5>
     <div class="card-body">
@@ -27,4 +62,4 @@
         </table>
     </div>
 </div>
-<div>&nbsp;</div>
+<div>&nbsp;</div> -->
