added usage/batch.rst to index and merged results.html and docs/index to try and fix merge conflict

--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -9,9 +9,9 @@
 
 <div class="p-5 text-left bg-light">
   <h1 class="mb-3">{{transient.name}} </h1>
-    <a href="/api/transient/get/{{transient.name}}" role="button" class="btn btn-success">Download data <i class="bi bi-box-arrow-in-down"></i></button></a>
+    <a href="/api/transient/get/{{transient.name}}" role="button" class="btn btn-success">Download data <i class="bi bi-box-arrow-in-down"></i></button></a> <div class="container">
 </div>
-<div class="container">
+
     <div class="row">
         <div class="col-lg-5">
                 {% include "host/information_card.html" %}
