removed extra css and old code

--- a/app/host/templates/host/analytics_information_card.html
+++ b/app/host/templates/host/analytics_information_card.html
@@ -1,15 +1,8 @@
 {% extends "host/card_template.html"%}
-
+<!-- title -->
 {% block title %} <h5>Database Snapshot </h5>{%endblock%}
 
+<!-- body -->
 {% block body %}<b>Total transients ingested:{{total}}</b>
 {{ bokeh_cutout_div | safe }}{% endblock %}
 
- <!-- <div class="card">
-     <h5 class="card-header">Database Snapshot</h5>
-     <div class="card-body">
-         <b>Total transients ingested:</b> {{total}}
-         {{ bokeh_cutout_div | safe }}
-     </div>
- </div>
-<div>&nbsp;</div> -->
