--- a/app/host/templates/host/cutout_status_card.html
+++ b/app/host/templates/host/cutout_status_card.html
@@ -1,7 +1,9 @@
 {% extends "host/card_template.html" %}
 
+<!-- title -->
 {% block title %}<h5>Cutout Download Report</h5>{% endblock %}
 
+<!-- body -->
 {% block body %}
 
 {% for filter, status in filter_status.items %}
@@ -17,17 +19,3 @@
 
 
 
-<!-- <div class="card">
-    <h5 class="card-header">Cutout Download Report</h5>
-    <div class="card-body">
-        {% for filter, status in filter_status.items %}
-            {{filter}}:
-            {% if status == "yes"%}
-                <i class="bi bi-check", style="font-size: 2rem; color: green;"></i>
-            {% else %}
-                <i class="bi bi-x", style="font-size: 2rem; color: red;"></i>
-            {% endif %}
-        {% endfor %}
-    </div>
-</div>
-<div>&nbsp;</div> -->
