--- a/app/host/templates/host/cutout_card.html
+++ b/app/host/templates/host/cutout_card.html
@@ -2,8 +2,10 @@
 
 {% load crispy_forms_tags %}
 
+<!-- title -->
 {% block title %} <h5> Imaging data </h5>{% endblock %}
 
+<!-- body -->
 {% block body %}
 {{ bokeh_cutout_div | safe }}
 <form class="form" , method="POST">
@@ -18,26 +20,3 @@
 {% endblock %}
 
 
-
-
-
-
-
-
-
-<!-- <div class="card">
-    <h5 class="card-header">Imaging data</h5>
-    <div class="card-body">
-        {{ bokeh_cutout_div | safe }}
-        <form class="form", method="POST">
-            {% csrf_token %}
-            <div class="input-group mb-10">
-                {{ form.filters }}
-                <div class="input-group-append">
-                    <button type="submit",class="btn btn-outline-success",type="button">Get Cutout</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-<div>&nbsp;</div> -->
