added sed plotting

--- a/app/host/templates/host/sed_inference_card.html
+++ b/app/host/templates/host/sed_inference_card.html
@@ -24,6 +24,9 @@
             <br>
             <h6>Local parameter details</h6>
             <br>
+                <div class="container">
+                 {{ bokeh_sed_posterior_div | safe }}
+                </div>
             <table class="table table-striped">
             <thead>
             <tr>
