refactor nearly complete

--- a/app/host/templates/host/cutout_card.html
+++ b/app/host/templates/host/cutout_card.html
@@ -7,7 +7,7 @@
 
 <!-- body -->
 {% block body %}
-{{ bokeh_cutout_div | safe }}
+{{ cutout_bokeh_div | safe }}
 <form class="form" , method="POST">
     {% csrf_token %}
     <div class="input-group mb-10">
