--- a/app/host/templates/host/sed_card.html
+++ b/app/host/templates/host/sed_card.html
@@ -22,13 +22,13 @@
     <div class="tab-pane fade" id="local-sed" role="tabpanel" aria-labelledby="local-sed-tab">
         <div>&nbsp;</div>
         <div class="container">
-            {{ bokeh_sed_local_div | safe }}
+            {{ local_sed_bokeh_div | safe }}
         </div>
     </div>
     <div class="tab-pane fade show active" id="global-sed" role="tabpanel" aria-labelledby="global-sed-tab">
         <div>&nbsp;</div>
         <div class="container">
-            {{ bokeh_sed_global_div | safe }}
+            {{ global_sed_bokeh_div | safe }}
         </div>
     </div>
 </div>
