--- a/app/host/templates/host/sed_inference_card.html
+++ b/app/host/templates/host/sed_inference_card.html
@@ -25,7 +25,7 @@
             <h6>Local parameter details</h6>
             <br>
                 <div class="container">
-                 {{ bokeh_sed_posterior_div | safe }}
+                 {{ local_sed_posterior_bokeh_div | safe }}
                 </div>
             <table class="table table-striped">
             <thead>
@@ -37,14 +37,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for item in local_sed_results %}
-            <tr>
-                <td>{{item.0}}</td>
-                <td>{{item.1|floatformat:3}}</td>
-                <td>{{item.2|floatformat:3}}</td>
-                <td>{{item.3|floatformat:3}}</td>
-            </tr>
-            {% endfor %}
+
             </tbody>
         </table>
         </div>
@@ -55,6 +48,9 @@
             <br>
             <h6>Global parameter details</h6>
             <br>
+            <div class="container">
+                 {{ local_sed_posterior_bokeh_div | safe }}
+                </div>
             <table class="table table-striped">
             <thead>
             <tr>
@@ -65,14 +61,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for item in global_sed_results %}
-            <tr>
-                <td>{{item.0}}</td>
-                <td>{{item.1|floatformat:3}}</td>
-                <td>{{item.2|floatformat:3}}</td>
-                <td>{{item.3|floatformat:3}}</td>
-            </tr>
-            {% endfor %}
+
             </tbody>
         </table>
         </div>
