--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -66,18 +66,22 @@
                     </li>
                         {% if user.is_authenticated %}
                             <li class="nav-item">
-                                <a class="nav-link" href="/"> {{ user.username }} </a>
+                                <a class="nav-link" href="#"> Logged in as {{ user.username }} </a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-light btn-sm"  type="button"  href="/accounts/logout"> Logout </a>
+                                <a class="nav-link" href="/accounts/logout"><i class="bi bi-box-arrow-left"></i> Logout </a>
                             </li>
                     {% else %}
                     <li class="nav-item">
-                            <a class="btn btn-light btn-sm "  type="button" href="/accounts/login"> Login </a>
+                            <a class="nav-link" href="/accounts/login">
+                                <i class="bi bi-box-arrow-in-right"></i> Login
+                            </a>
                             </li>
                     {% endif %}
 
                 </ul>
+
+</div>
             </div>
         </div>
     </nav>
