--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -96,7 +96,7 @@
             <span class="text-muted">Report bugs and issues on Github
                 <a href="https://github.com/astrophpeter/blast/issues">here</a>
 
-                <span style="margin-left:2px"><span class="text-muted">| UCSC Transitent team web pages
+                <span style="margin-left:2px"><span class="text-muted">| UCSC Transient team web pages
                         <a href="https://transients.ucsc.edu/">here</a>
 
                     </span>
