--- a/app/users/templates/registration/login.html
+++ b/app/users/templates/registration/login.html
@@ -1,16 +1,78 @@
 {% extends 'host/base.html' %}
 
 {% block body %}
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
 
-<div class="h-100 d-flex align-items-center justify-content-center">
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-<h2>Login</h2>
+form {
+    background-color: rgb(248,249,250);
+    padding-top: 10%;
+    border: 3px solid rgb(248,249,250);
+    width: 500px; /* Set the width of the form */
+    margin: 0 auto; /* Center the form horizontally */
+}
 
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #0852f4;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+span.psw {
+  float: right;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+}
+</style>
+
+
+<body>
 <form method="post">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Login">
+    <h2 style="text-align: center;">Blast</h2>
+    
+    <div class="container">
+        <label for="uname"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
+    
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+            
+        <button type="submit">Login</button>
+    </div> 
+        
+    <div class="container" style="background-color:rgb(248,249,250)">
+        <label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
+        <span class="psw">Forgot <a href="#">password?</a></span>
+        </div>     
 </form>
-</div>
-
+</body>
 {% endblock %}
