--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -34,7 +34,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-size-xlg">
         <div class="container">
-            <a class="navbar-brand" href="#">Blast</a>
+          <a class="navbar-brand" href="#">
+	    Blast <font color='red' style="border-width:3px; border-style:solid; border-color:#FF0000; padding: 0.1em; border-radius:10px">Beta</font>
+	  </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,7 +47,7 @@
                         <a class="nav-link" href="/"><i class="bi bi-house-door-fill"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/transients"><i class="bi bi-search"></i> Transients</a>
+                      <a class="nav-link" href="/transients"><i class="bi bi-search"></i> Transients</a>
                     </li>
                     <!--<li class="nav-item">
                             <a class="nav-link" href="/analytics">Analytics</a>
@@ -65,6 +67,9 @@
                         </a>
                     </li>
                         {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/transient_uploads"> Uploads </a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#"> Logged in as {{ user.username }} </a>
                             </li>
