--- a/app/host/templates/host/information_card.html
+++ b/app/host/templates/host/information_card.html
@@ -13,13 +13,23 @@ Right ascension: {{transient.ra}}<br>
 Declination: {{transient.dec}}<br>
 Discovery Date: {{transient.public_timestamp}}<br>
 Classification: {{transient.spectroscopic_class}}<br>
-MW E(B-V): {{transient.milkyway_dust_reddening}}<br>
+{% if transient.redshift %}
+Redshift: {{transient.redshift|floatformat:6}}<br>
+{% else %}
+Redshift: None<br>
+{% endif %}
+MW E(B-V): {{transient.milkyway_dust_reddening|floatformat:3}}<br>
 <br>
 
 <h5>Host</h5>
 Name: {{transient.host.name}}<br>
 Right ascension: {{transient.host.ra}}<br>
 Declination: {{transient.host.dec}}<br>
-Redshift: {{transient.host.redshift}}<br>
+{% if transient.host.redshift %}
+Redshift: {{transient.host.redshift|floatformat:6}}<br>
+{% else %}
+Redshift: None<br>
+{% endif %}
+Photometric Redshift: {{transient.host.photometric_redshift|floatformat:3}}<br>
 
 {% endblock %}
