--- a/app/host/templates/host/photometry_card.html
+++ b/app/host/templates/host/photometry_card.html
@@ -31,6 +31,8 @@
                 <th scope="col">Filter</th>
                 <th scope="col">Flux (mJy)</th>
                 <th scope="col">Flux error (mJy)</th>
+                <th scope="col">Mag</th>
+                <th scope="col">Mag error</th>
             </tr>
             </thead>
             <tbody>
@@ -39,6 +41,8 @@
                 <td>{{item.filter.name}}</td>
                 <td>{{item.flux_rounded}}</td>
                 <td>{{item.flux_error_rounded}}</td>
+                <td>{{item.magnitude|floatformat:3}}</td>
+		<td>{{item.magnitude_error|floatformat:3}}</td>
             </tr>
             {% endfor %}
             </tbody>
@@ -52,13 +56,18 @@
             RA, DEC (J2000) = {{global_aperture.ra}}, {{global_aperture.dec}}<br>
         semi major axis, semi minor axis (arcsec) = {{global_aperture.semi_major_axis}}, {{global_aperture.semi_minor_axis}}<br>
         angle (degrees, anti-clockwise from east) = {{global_aperture.orientation_angle}}<br>
-            <br>
+        <br>
+	{% if contam_warning %}
+	<b style="color:red">Warning:</b> possible contaminating objects in the global aperture<br>
+	{% endif %}
         <table class="table table-striped">
             <thead>
             <tr>
                 <th scope="col">Filter</th>
                 <th scope="col">Flux (mJy)</th>
                 <th scope="col">Flux error (mJy)</th>
+                <th scope="col">Mag</th>
+                <th scope="col">Mag error</th>
             </tr>
             </thead>
             <tbody>
@@ -67,6 +76,8 @@
                     <td>{{item.filter.name}}</td>
                     <td>{{item.flux_rounded}}</td>
                     <td>{{item.flux_error_rounded}}</td>
+		    <td>{{item.magnitude|floatformat:3}}</td>
+		    <td>{{item.magnitude_error|floatformat:3}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
