--- a/app/host/templates/host/transient_list.html
+++ b/app/host/templates/host/transient_list.html
@@ -6,58 +6,24 @@
 
 {% load crispy_forms_tags %}
 
+{% load render_table from django_tables2 %}
+
+{% load bootstrap3 %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <div class="p-5 text-left bg-light">
   <h1 class="mb-3">Transients</h1>
-  <h6 class="mb-3">Search Blast's database of transients</h6>
+  <h4 class="mb-3">Search Blast's database of transients</h4>
 </div>
 
-<form class="form", method="POST">
-    {% csrf_token %}
-    <div class="input-group mb-10">
-      {{ form.name | as_crispy_field }}
-    <div class="input-group-append">
-    <button type="submit", class="btn btn-outline-success" type="button">Search <i class="bi bi-search"></i></button>
-     </div>
-  </div>
-</form>
+      <form action="" method="get" class="form form-inline">
+        {% bootstrap_form filter.form layout='inline' %}
+        {% bootstrap_button 'Search' %}
+      </form>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Transient</th>
-      <th scope="col">Prefix</th>
-      <th scope="col">Right Ascension</th>
-      <th scope="col">Declination</th>
-      <th scope="col">Discovery Date </th>
-        <th scope="col">Progress</th>
-      <th scope="col">Results</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for transient in transients %}
-    <tr>
-      <td>{{transient.name}}</td>
-      <td>{{transient.tns_prefix}}</td>
-      <td>{{transient.ra}}</td>
-      <td>{{transient.dec}}</td>
-      <td>{{transient.public_timestamp}}</td>
-        <td>
-          {% if transient.progress == 0 %}
-              Waiting
-          {% elif transient.progress == 100 %}
-            <div class="progress">
-              <div class="progress-bar bg-success" role="progressbar" style="width: {{transient.progress}}%;" aria-valuenow="{{transient.progress}}" aria-valuemin="0" aria-valuemax="100">{{transient.progress}}%</div>
-            </div>
-          {% else %}
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: {{transient.progress}}%;" aria-valuenow="{{transient.progress}}" aria-valuemin="0" aria-valuemax="100">{{transient.progress}}%</div>
-            </div>
-          {% endif %}
-        </td>
-      <td><a class="nav-link" href="{{transient.name}}/">{{transient.name}}</a></td>
-    </tr>
-   {% endfor %}
-  </tbody>
-</table>
+    <div class="box-body">
+      {% render_table table %}
 
+    </div>
+    <br>
+    <br>
 {% endblock %}
