--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -4,8 +4,8 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <!-- Bokeh -->
-    <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css" />
-    <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css" crossorigin="anonymous"/>
+    <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js" crossorigin="anonymous"></script>
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -113,8 +113,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js"></script>
-    {% block script %}{% endblock %}
+        <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js" 
+        integrity="sha384-qAE24rLAti3FnBClHlngWsDQZs6St9M7tNWdrWQeAWrtAEQTwCaNu9EIE716mUUp"
+        crossorigin="anonymous"></script>
+        {% block script %}{% endblock %}
 </body>
 
 </html>
