--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -4,7 +4,7 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <!-- Bokeh -->
-    <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css" crossorigin="anonymous"/>
+    <!-- <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css" crossorigin="anonymous"/> -->
     <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js" crossorigin="anonymous"></script>
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
