Fix template syntax mangled by auto-formatter

--- a/app/host/templates/host/index.html
+++ b/app/host/templates/host/index.html
@@ -1,6 +1,11 @@
-{% extends 'host/base.html' %} {% block title %} Home {% endblock %} {% block
-script %} {{ bokeh_cutout_script | safe }} {% endblock %} {% block body %} {%
-load crispy_forms_tags %}
+{% extends 'host/base.html' %}
+
+{% block title %} Home {% endblock %}
+{% block script %} {{ bokeh_cutout_script | safe }} {% endblock %}
+{% block body %}
+
+{% load crispy_forms_tags %}
+
 
 <div class="p-5 text-left bg-light">
   <h1 class="mb-3">Welcome to blast!</h1>
