--- a/app/host/templates/host/index.html
+++ b/app/host/templates/host/index.html
@@ -8,13 +8,13 @@
 
 
 <div class="p-5 text-left bg-light">
-  <h1 class="mb-3">Welcome to blast!</h1>
+  <h1 class="mb-3">Welcome to Blast!</h1>
   <h6 class="mb-3">
     A Django web app for the automatic real-time characterization of transient
     host galaxies
   </h6>
   <a href="transients/" role="button" class="btn btn-success">
-    Search the blast database <i class="bi bi-search"></i>
+    Search the Blast database <i class="bi bi-search"></i>
   </a>
   <a
     href="https://blast.readthedocs.io/en/latest/index.html"
