--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -5,16 +5,20 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- Bokeh -->
     <!-- <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.css" type="text/css" crossorigin="anonymous"/> -->
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />-->
+
     <script type="text/javascript" src="https://cdn.pydata.org/bokeh/release/bokeh-2.4.2.min.js" crossorigin="anonymous"></script>
     <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <style>
         body {
             margin-bottom: 5%;
             border-radius: 5px;
+	    font-size: 12pt;
         }
         footer {
             position: fixed;
@@ -27,7 +31,12 @@
             color: white;
             text-align: center;
         }
+	.navbar
+	{
+	    font-size: 12pt;
+	}
     </style>
+
 </head>
 
 <body>
