--- a/app/host/templates/host/sed_card.html
+++ b/app/host/templates/host/sed_card.html
@@ -3,7 +3,7 @@
 <!-- title -->
 {% block title %}
 
-<h5>Spectral Energy Distribution</h5>
+<h4>Spectral Energy Distribution</h4>
 
 <ul class="nav nav-tabs card-header-tabs" id="myTab-sed" role="tablist">
     <li class="nav-item" role="presentation">
@@ -19,7 +19,7 @@
 <!-- body -->
 {% block body %}
 <div class="tab-content" id="myTabContent-sed">
-    <div class="tab-pane fade" id="local-sed" role="tabpanel" aria-labelledby="local-sed-tab">
+    <div class="tab-pane" id="local-sed" role="tabpanel" aria-labelledby="local-sed-tab">
         <div>&nbsp;</div>
         <div class="container">
 	  <button style="margin-bottom:5px;" type="button" class="report" onclick="window.open('{% url 'download_modelfit' transient.name 'local' %}','_self')">
@@ -28,7 +28,7 @@
             {{ bokeh_sed_local_div | safe }}
         </div>
     </div>
-    <div class="tab-pane fade show active" id="global-sed" role="tabpanel" aria-labelledby="global-sed-tab">
+    <div class="tab-pane active" id="global-sed" role="tabpanel" aria-labelledby="global-sed-tab">
        	<div>&nbsp;</div>
         {% if contam_warning %}
           <b style="color:red">Warning:</b> possible contaminating objects in the global aperture<br>
