--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -32,7 +32,8 @@
     font-size: 12pt;
   }
   </style>
-
+  {% load static %}
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
 </head>
 
 <body>
