Fix layout problems related to Bootstrap and Bokeh updates

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -92,7 +92,7 @@
     </div>
   </nav>
 
-  <div class="container bg-light">
+  <div class="container-lg bg-light">
     {% block body %}
     {% endblock %}
   </div>
