--- a/app/host/templates/host/photometry_card.html
+++ b/app/host/templates/host/photometry_card.html
@@ -19,7 +19,7 @@
 <div class="tab-content" id="myTabContent">
     <div class="tab-pane" id="local" role="tabpanel" aria-labelledby="local-tab">
         <div class="table-responsive">
-            <div class="container">
+            <div class="">
                 <br>
                 <h4>Aperture details</h4>
         RA, DEC (J2000) = {{local_aperture.ra}}, {{local_aperture.dec}}<br>
@@ -54,7 +54,7 @@
     <div class="tab-pane active" id="global" role="tabpanel" aria-labelledby="global-tab">
         <br>
 	<div class="table-responsive">
-            <div class="container">
+            <div class="">
                 <h4>Aperture details</h4>
             RA, DEC (J2000) = {{global_aperture.ra}}, {{global_aperture.dec}}<br>
         semi major axis, semi minor axis (arcsec) = {{global_aperture.semi_major_axis}}, {{global_aperture.semi_minor_axis}}<br>
