--- a/app/host/templates/host/sed_inference_card.html
+++ b/app/host/templates/host/sed_inference_card.html
@@ -21,7 +21,7 @@
 
 <div class="tab-content" id="myTabContent">
     <div class="tab-pane" id="local-params" role="tabpanel" aria-labelledby="local-params-tab">
-        <div class="container">
+        <div class="">
             <br>
             <h4>Local parameter details</h4>
 	    {% if local_sed_results %}
@@ -61,7 +61,7 @@
     </div>
     <div class="tab-pane active" id="global-params" role="tabpanel" aria-labelledby="global-params-tab">
 
-        <div class="container">
+        <div class="">
             <br>
             <h4>Global parameter details</h4>
 	    {% if global_sed_results %}
