Use bootstrap4 consistently. CSS styling updates.

--- a/app/host/templates/host/acknowledgements.html
+++ b/app/host/templates/host/acknowledgements.html
@@ -3,7 +3,7 @@
 {% block title %} Acknowledgements {% endblock %}
 
 {% block body %}
-
+<div class="container">
 <div class="p-5 text-left bg-light" >
   <h1 class="mb-3">Acknowledgements</h1>
   <h5 class="mb-3">Blast is largely glue between already established software projects. It could not
@@ -53,5 +53,6 @@
   </tbody>
 </table>
 
+</div>
 
 {% endblock %}
