--- a/app/host/templates/host/index.html
+++ b/app/host/templates/host/index.html
@@ -7,10 +7,11 @@
 {% load crispy_forms_tags %}
 
 
+<div class="container">
 <div class="p-5 text-left bg-light">
   <h1 class="mb-3">Welcome to Blast!</h1>
   <h4 class="mb-3">
-    A Django web app for the automatic real-time characterization of transient
+    A web app for the automatic real-time characterization of transient
     host galaxies
   </h4>
   <a href="transients/" role="button" class="btn btn-success">
@@ -24,7 +25,6 @@
   </a>
 </div>
 
-<div class="container">
   <div class="row">
     <div class="col-lg-5">
       <p>
