--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -4,11 +4,10 @@
 <head>
   <title>{% block title %}{% endblock %}</title>
   <!-- Boostrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
   <style>
   body {
     margin-bottom: 5%;
@@ -29,6 +28,31 @@
   .navbar {
     font-size: 12pt;
   }
+  .navbar-brand span {
+    color:#d15e00;
+    border-width:3px;
+    border-style:solid;
+    border-color:#d15e00;
+    padding: 0.1em;
+    border-radius:10px;
+  }
+  .btn-success {
+    background-color: #ff7300;
+    border-color: #ff7300;
+  }
+  .btn-primary {
+    background-color: #d15e00;
+    border-color: #d15e00;
+  }
+  a {
+    color:#d15e00;
+  }
+  a.hover {
+    color:#ff7300;
+  }
+  .form-control.is-valid, .form-control:focus {
+    border-color:#d15e00;
+  }
   </style>
   {% load static %}
   <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
@@ -38,7 +62,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-size-xlg">
     <div class="container">
       <a class="navbar-brand" href="#">
-        Blast <font color='red' style="border-width:3px; border-style:solid; border-color:#FF0000; padding: 0.1em; border-radius:10px">Beta</font>
+        Blast <span>Beta</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -113,8 +137,8 @@
   </footer>
 
   <!-- Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl"
     crossorigin="anonymous"></script>
   <!-- Bokeh -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bokeh/3.4.1/bokeh.min.js"
