--- a/app/host/templates/host/transient_list.html
+++ b/app/host/templates/host/transient_list.html
@@ -10,20 +10,23 @@
 
 {% load render_table from django_tables2 %}
 
-<div class="p-5 text-left bg-light">
+<div class="container">
+  
+  <div class="p-5 text-left bg-light">
   <h1 class="mb-3">Transients</h1>
   <h4 class="mb-3">Search Blast's database of transients</h4>
 </div>
 
-      <form action="" method="get" class="form form-inline">
-        {% bootstrap_form filter.form layout='inline' %}
-        {% bootstrap_button 'Search' %}
-      </form>
+<form action="" method="get" class="form form-inline">
+  {% bootstrap_form filter.form layout='inline' %}
+  {% bootstrap_button 'Search' %}
+</form>
 
-    <div class="box-body">
-      {% render_table table %}
-
-    </div>
-    <br>
-    <br>
+<div class="box-body">
+  {% render_table table %}
+  
+</div>
+<br>
+<br>
+</div>
 {% endblock %}
