More page style revisions

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -117,7 +117,7 @@
     </div>
   </nav>
 
-  <div class="container-lg bg-light">
+  <div class="container bg-light">
     {% block body %}
     {% endblock %}
   </div>
