--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -6,36 +6,38 @@
 {% load crispy_forms_tags %}
 {% block body %}
 
-<div class="p-5 text-left bg-light">
-  {% if warning %}
-      <h1 class="mb-3">{{transient.name}} <b style="color:red">(warnings)</b></h1>
-  {% else %}
-      <h1 class="mb-3">{{transient.name}} </h1>
-  {% endif %}
-      <a href="/api/transient/get/{{transient.name}}" role="button" class="btn btn-success">Download data <i class="bi bi-box-arrow-in-down"></i></button></a>
-{% if is_auth %}
-<a href="{% url 'reprocess_transient' transient.name %}" role="button" class="btn btn-warning" class='reprocess'>Reprocess</button></a>
-{% endif %}
-    <div class="container-lg">
-        <div class="row">
-            <div class="col-md-5">
+<div class="container">
+    <div class="p-5 text-left bg-light">
+    {% if warning %}
+        <h1 class="mb-3">{{transient.name}} <b style="color:red">(warnings)</b></h1>
+    {% else %}
+        <h1 class="mb-3">{{transient.name}} </h1>
+    {% endif %}
+        <a href="/api/transient/get/{{transient.name}}" role="button" class="btn btn-success">Download data <i class="bi bi-box-arrow-in-down"></i></button></a>
+    {% if is_auth %}
+    <a href="{% url 'reprocess_transient' transient.name %}" role="button" class="btn btn-warning" class='reprocess'>Reprocess</button></a>
+    {% endif %}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
 
-                {% include "host/information_card.html" %}
+                    {% include "host/information_card.html" %}
 
-                {% include "host/processing_status_card.html" %}
+                    {% include "host/processing_status_card.html" %}
 
-                {% include "host/cutout_status_card.html" %}
+                    {% include "host/cutout_status_card.html" %}
 
-                {% include "host/photometry_card.html" %}
+                    {% include "host/photometry_card.html" %}
 
-            </div>
+                </div>
 
-            <div class="col-md-7">
-                {% include "host/cutout_card.html" %}
+                <div class="col-md-7">
+                    {% include "host/cutout_card.html" %}
 
-                {% include "host/sed_card.html" %}
+                    {% include "host/sed_card.html" %}
 
-                {% include "host/sed_inference_card.html" %}
+                    {% include "host/sed_inference_card.html" %}
+                </div>
             </div>
         </div>
     </div>
