--- a/app/host/templates/host/acknowledgements.html
+++ b/app/host/templates/host/acknowledgements.html
@@ -6,29 +6,30 @@
 <div class="container">
 <div class="p-5 text-left bg-light" >
   <h1 class="mb-3">Acknowledgements</h1>
-  <h5 class="mb-3">Blast is largely glue between already established software projects. It could not
+  <p class="mb-3">Blast is largely glue between already established software projects. It could not
     exist without them. If you use Blast, you <b>must</b> acknowledge and cite all
     of the following projects which Blast uses. Blast is based upon work supported by the National Aeronautics and Space Administration
-    under Grant No. 80NSSC21K0834 issued through the Astrophysics Data Analysis Program.</h5>
-
-  <h5 class="mb-3">
-    The public deployment of Blast at <a href="https://blast.scimma.org">https://blast.scimma.org</a> is built and maintained by the <a href="https://ncsa.illinois.edu/">National Center for Supercomputing Applications (NCSA)</a> at the University of Illinois Urbana-Champaign, and it is hosted on cyberinfrastructure provided by the <a href="https://access-ci.org/">NSF ACCESS program</a>.
-  </h5>
-
-
+    under Grant No. 80NSSC21K0834 issued through the Astrophysics Data Analysis Program.</p>
+    
+    <p class="mb-3">
+      The public deployment of Blast at <a href="https://blast.scimma.org">https://blast.scimma.org</a> is built and maintained by the <a href="https://ncsa.illinois.edu/">National Center for Supercomputing Applications (NCSA)</a> at the University of Illinois Urbana-Champaign, and it is hosted on cyberinfrastructure provided by the <a href="https://access-ci.org/">NSF ACCESS program</a>.
+    </p>
+    
+    
   <h3 class="mb-3">Contributors</h3>
-  <h5 class="mb-3">Peter McGill      (University of California, Santa Cruz)</h5>
-  <h5 class="mb-3">David Jones       (University of California, Santa Cruz)</h5>
-  <h5 class="mb-3">Dave Coulter      (University of California, Santa Cruz)</h5>
-  <h5 class="mb-3">Lila Braff        (University of California, Santa Cruz)</h5>
-  <h5 class="mb-3">Kayla Loertscher  (University of California, Santa Cruz)</h5>
-  <h5 class="mb-3">Zhisen Lai        (University of California, Santa Cruz)</h5>
-  <h5 class="mb-3">Jack Kutcka       (University of California, Santa Cruz)</h5>
-  <h5 class="mb-3">T. Andrew Manning (NCSA, University of Illinois Urbana-Champaign)</h5>
-
+  <ul>
+    <li class="mb-3">Peter McGill      (University of California, Santa Cruz)</li>
+    <li class="mb-3">David Jones       (University of California, Santa Cruz)</li>
+    <li class="mb-3">Dave Coulter      (University of California, Santa Cruz)</li>
+    <li class="mb-3">Lila Braff        (University of California, Santa Cruz)</li>
+    <li class="mb-3">Kayla Loertscher  (University of California, Santa Cruz)</li>
+    <li class="mb-3">Zhisen Lai        (University of California, Santa Cruz)</li>
+    <li class="mb-3">Jack Kutcka       (University of California, Santa Cruz)</li>
+    <li class="mb-3">T. Andrew Manning (NCSA, University of Illinois Urbana-Champaign)</li>
+  </ul>
 </div>
 
-<table class="table">
+<table class="table table-responsive">
   <thead>
     <tr>
       <th scope="col">Project</th>
