Revise reprocess checkbox to retrigger and add informative label

--- a/app/host/templates/host/transient_uploads.html
+++ b/app/host/templates/host/transient_uploads.html
@@ -40,7 +40,7 @@
           {{ form.tns_names | as_crispy_field }}
         </div>
         <div class="form-check" >
-          {{ form.reprocess | as_crispy_field }}
+          {{ form.retrigger | as_crispy_field }}
         </div>
         <div class="input-group-text" >
           {{ form.full_info | as_crispy_field }}
