Allow full-screen width for transient results

--- a/app/host/templates/host/results.html
+++ b/app/host/templates/host/results.html
@@ -6,7 +6,7 @@
 {% load crispy_forms_tags %}
 {% block body %}
 
-<div class="container">
+<div class="container-lg">
     <div class="p-5 text-left bg-light">
     {% if warning %}
         <h1 class="mb-3">{{transient.name}} <b style="color:red">(warnings)</b></h1>
@@ -17,7 +17,7 @@
     {% if is_auth %}
     <a href="{% url 'reprocess_transient' transient.name %}" role="button" class="btn btn-warning" class='reprocess'>Reprocess</button></a>
     {% endif %}
-        <div class="container">
+        <div class="">
             <div class="row">
                 <div class="col-md-5">
 
