--- a/app/users/templates/registration/login.html
+++ b/app/users/templates/registration/login.html
@@ -57,7 +57,7 @@ span.psw {
 <form method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Login"></input>
+    <button type="submit" class="btn btn-lg btn-block btn-primary">Login</button>
 </form>
 </body>
 {% endblock %}
