Update repo URL references to new migrated location
From https://github.com/astrophpeter/blast to https://github.com/scimma/blast

--- a/app/host/templates/host/base.html
+++ b/app/host/templates/host/base.html
@@ -104,7 +104,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/astrophpeter/blast">
+            <a class="nav-link" href="https://github.com/scimma/blast">
               <i class="bi-github" role="img" aria-label="GitHub"></i> Source Code
             </a>
           </li>
@@ -140,7 +140,7 @@
   <footer class="footer py-3 bg-light">
     <div class="container">
       <span class="text-muted">Report bugs and issues on Github
-        <a href="https://github.com/astrophpeter/blast/issues"><i class="bi-github" role="img" aria-label="GitHub"></i> here</a>
+        <a href="https://github.com/scimma/blast/issues"><i class="bi-github" role="img" aria-label="GitHub"></i> here</a>
         <span style="margin-left:2px">
           <span class="text-muted">| UCSC Transient team web pages
             <a href="https://transients.ucsc.edu/">here</a>
